--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ torch = "^2.1.2"
 torchvision = "^0.16.2"
 ipykernel = "^6.28.0"
 ipywidgets = "^8.1.1"
+tqdm = "^4.66.1"
 
 [build-system]
 requires = ["poetry-core"]
