--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,10 +10,14 @@ python = ">=3.10,<3.12"
 tensorflow = "^2.15"
 matplotlib = "^3.8.2"
 numpy = "^1.26.3"
-torch = "^2.1.2"
 torchvision = "^0.16.2"
 ipykernel = "^6.28.0"
 ipywidgets = "^8.1.1"
+
+[[tool.poetry.source]]
+name = "pytorch-gpu-src"
+url = "https://download.pytorch.org/whl/rocm5.6"
+priority = "explicit"
 
 [build-system]
 requires = ["poetry-core"]
